# wasm_bazel

./: .gitignore  BUILD  MODULE.bazel  README.md
bazel/: BUILD  debug.bzl  extensions.bzl  toolchain.bzl  toolchain_config.bzl  transitions.bzl  unified_toolchain.bzl  wasi_sdk_wrapper.bzl  wasi_toolchain_repo.bzl  wasm_toolchain.bzl
examples/hello/: BUILD  hello.cc
tools/webserver/: BUILD  main.cc
tools/webserver/static/: data.json  index.html  script.js  style.css
