module(
    name = "wasm_toolchain",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "platforms", version = "0.0.11")

string_flag = use_repo_rule("@bazel_skylib//rules:common_settings.bzl", "string_flag")
string_flag(
    name = "wasi_sdk_version",
    build_setting_default = "29.0",
)
string_flag(
    name = "wasi_sdk_arch",
    build_setting_default = "arm64-linux",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "wasi_sdk",
    url = "https://github.com/WebAssembly/wasi-sdk/releases/download/wasi-sdk-29/wasi-sdk-29.0-arm64-linux.tar.gz",
    sha256 = "052ad773397dc9e5aa99fb4cfef694175e6b1e81bb2ad1d3c8e7b3fc81441b7c",
    strip_prefix = "wasi-sdk-29.0-arm64-linux",
    build_file = "//third_party/wasi_sdk:wasi_sdk.BUILD",
)

http_archive(
    name = "wasmer",
    url = "https://github.com/wasmerio/wasmer/releases/download/v6.1.0/wasmer-linux-aarch64.tar.gz",
    sha256 = "1be37c5502d9135bbef1a34433bf20cbcd1d46f7d0662331016aeb3a5e0fbbf8",
    build_file_content = """
filegroup(
    name = "wasmer",
    srcs = ["bin/wasmer"],
    visibility = ["//visibility:public"],
)
""",
)

register_toolchains("//:wasm32-wasi-toolchain")

# Expose repositories to consumers of this module
use_repo(wasi_sdk = "wasi_sdk", wasmer = "wasmer")
